# EEGLE

./: CMakeLists.txt  eeg_data_manager.cpp  eeg_data_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  read_signal_file.cpp  read_signal_file.h  resources.qrc  show_hdr.cpp  show_hdr.h  viewcurve.cpp  viewcurve.h
